[package]
name = "CheckUser"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.31", features = ["full"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"
rusqlite = { version = "0.32.1" }
chrono = "0.4.38"
